@@ -117,7 +117,7 @@ Table of Contents
 	width: 100%;
 }
 .layout-three-col-left div#content {
-	margin: 0 0 0 400px;
+	margin: 0 0 0 420px;
 }
 .layout-three-col-left div#primary,
 .layout-three-col-left div#secondary {
@@ -141,7 +141,7 @@ Table of Contents
 	width: 100%;
 }
 .layout-three-col-right div#content {
-	margin: 0 400px 0 0;
+	margin: 0 420px 0 0;
 }
 .layout-three-col-right div#primary,
 .layout-three-col-right div#secondary {
@@ -170,7 +170,7 @@ Table of Contents
 	width: 100%;
 }
 .layout-three-col-both div#content {
-	margin: 0 200px;
+	margin: 0 210px;
 }
 .layout-three-col-both div#primary,
 .layout-three-col-both div#secondary {
