@@ -200,6 +200,10 @@ img, p img {
 	position:absolute;
 	text-indent:-999em;
 }
+#blog-description {
+	clear:both;
+	margin:10px auto;
+}
 #container_wrap {
 	margin:0 auto;
 	position:relative;
@@ -530,24 +534,19 @@ img, p img {
 	color:#111;
 	text-decoration:underline;
 }
-.searchtext {
-	width:180px;
+.sb_search_widget {
+	overflow:hidden;
+}
+.sb_search_widget .searchtext {
+	width:95%;
 	color:#777;
 	font-size:1em;
 	padding:5px;
 	border:1px solid #222;
+	margin-bottom:5px;
 }
-.searchform .button {
-	background:#222;
-	color:#eee;
-	width:60px;
-	padding:5px;
-	border:1px solid #222;
-	margin:-1px 0;
-}
-.searchform .button:hover {
-	background:#555;
-	color:#fff;
+.sb_search_widget .searchform .button {
+	margin:0;
 }
 .widget_calendar table {
 	width:100%;
@@ -764,12 +763,12 @@ div#footer, #wp_footer {
 .gform_wrapper {
 	width:490px;
 }
-.gform_wrapper input[type=text],
-.gform_wrapper textarea {
-	color:#777;
+body .gform_wrapper input[type=text],
+body .gform_wrapper textarea {
+	color:#333;
 	font-size:1em;
+	border:1px solid #aaa;
 	padding:5px;
-	border:1px solid #222;
 }
 .gform_wrapper .top_label input.medium,
 .gform_wrapper .top_label select.medium  {
@@ -790,32 +789,22 @@ div#footer, #wp_footer {
 	margin-bottom:0;
 }
 .gform_wrapper input.button {
-	background:#222;
-	color:#fff;
-	padding:5px 15px;
-	width:auto;
-	float:right;
+	margin:0;
 }
-.gform_wrapper input.button:hover {
-	background:#444;
-	color:#fff;
-}
-.gform_wrapper .gform_footer {
+body .gform_wrapper .gform_footer {
 	margin:10px 0 0;
 	padding:0;
 }
-
-.aside .gform_wrapper .gform_heading {
+.widget .gform_wrapper {
+	margin:0;
+}
+.widget .gform_wrapper .gform_heading {
 	margin-bottom:0;
 }
-.aside .gform_fields {
+.widget .gform_fields {
 	border-bottom:0;
 }
-.aside .gform_wrapper .ginput_complex .ginput_left,
-.aside .gform_wrapper .ginput_complex .ginput_right {
-	width:135px;
-}
-.aside .gform_wrapper .ginput_complex .ginput_left input,
-.aside .gform_wrapper .ginput_complex .ginput_right input {
-	width:117px!important;
+body .gform_wrapper .large input.medium,
+body .gform_wrapper .large select.medium {
+	width:92%;
 }
